# project-grader

./: .gitignore  PROJECT_STATE.md  README.md  TODO.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  updated-todo.md
apps/api/: .env.example  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260428_0001_initial_schema.py  20260428_0002_grade_components_nullable.py
apps/api/grader/: logging.py  main.py  settings.py
apps/api/grader/db/: __init__.py  models.py  session.py
apps/api/grader/routers/: cert.py  health.py  submissions.py
apps/api/grader/schemas/: submissions.py
apps/api/grader/services/: auth.py  catalog_repo.py  counterfeit.py  detection.py  grading.py  identification.py  quality.py  rate_limit.py  (+1 more)
apps/api/tests/: conftest.py  fixtures.py  test_auth.py  test_catalog_repo.py  test_cert_endpoint.py  test_counterfeit_service.py  test_detection_service.py  test_grading_pipeline_deps.py  test_grading_service.py  test_health.py  test_identification_service.py  test_migration_parity.py  test_models.py  test_observability.py  test_pipeline_runner.py  test_reconciler.py  test_shots.py  test_storage.py  test_submissions.py  test_submit_endpoint.py
ml/: _run_detection_tests.py  _run_identification_tests.py  _run_psa_scraper_tests.py  _run_rosette_tests.py  conftest.py  pyproject.toml
ml/data/catalogs/: __init__.py  build_detection_manifest.py  detection_dataset.yaml
ml/data/ingestion/: README.md  __init__.py  github_seed.py  pokemontcg.py  psa_exemplars.py  psa_pop_scraper.py  psa_public_api.py  reference_embeddings.py  references_storage.py  scryfall.py  scryfall_bulk.py  storage.py
ml/evaluation/: __init__.py
ml/evaluation/counterfeit_benchmark/: __init__.py  __main__.py  corpus.py  report.py  runner.py
ml/evaluation/counterfeit_recalibration/: __init__.py  __main__.py  corpus.py  report.py  sweep.py
ml/pipelines/counterfeit/: __init__.py  ensemble.py
ml/pipelines/detection/: __init__.py  detector.py  dewarp.py  yolo.py
ml/pipelines/identification/: __init__.py  catalog.py  dinov2.py  embedding.py  hashing.py  identify.py
ml/pipelines/quality/: __init__.py  blur.py  card_bbox.py  glare.py  report.py
ml/scripts/: README.md  accumulate_psa_exemplars.py  build_detection_manifest.py  com.projectgrader.psa-ingest.plist  daily_cycle.sh  embed_references.py  manufacturer_refs_ingest.py  psa_daily_ingest.py  psa_one_cert_smoke.py  sync_catalog_db.py
ml/tests/: fixtures.py  test_centering.py  test_color_profile.py  test_counterfeit_benchmark.py  test_counterfeit_recalibration.py  test_detection_manifest.py  test_detector.py  test_dewarp.py  test_edges.py  test_embedding_anomaly.py  test_embedding_anomaly_property.py  test_hashing.py  test_holographic_detector.py  test_identification.py  test_knn_reference_detector.py  test_pokemontcg_client.py  test_psa_exemplars.py  test_psa_identification.py  test_psa_pop_scraper.py  test_psa_surface.py  test_quality.py  test_reference_embeddings.py  test_references_storage.py  test_rosette.py  test_scryfall_bulk_client.py  test_scryfall_client.py  test_substrate_detector.py  test_sync_catalog_db.py  test_training_config.py  test_typography_detector.py  test_typography_property.py
ml/training/configs/: corners.yaml  detection.yaml  identification.yaml  surface.yaml
ml/training/datasets/: __init__.py  psa_corners.py  psa_identification.py  psa_surface.py
ml/training/trainers/: corners.py  detection.py  identification.py  surface.py
(+101 files in other folders)
