[project]
name = "grader-ml"
version = "0.0.1"
description = "ML pipelines, training, and evaluation for Project Grader."
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.1.0",
  "opencv-python-headless>=4.10.0",
  "pillow>=11.0.0",
  "scipy>=1.14.0",
  "pydantic>=2.9.0",
  "httpx>=0.27.0",
  # PyYAML is needed by the detection-manifest builder (writes the
  # ultralytics dataset.yaml) and by tests that read training configs.
  # Hydra ships its own copy under the `training` extra, but the
  # manifest builder + tests run without that extra installed.
  "pyyaml>=6.0",
  # RapidOCR provides PP-OCR ONNX weights via onnxruntime — no Paddle
  # dep, clean Windows wheels, low cold-start. Used by the typography
  # counterfeit detector. The detector falls back gracefully (UNVERIFIED)
  # when this isn't installed, but it's a hard dependency in the
  # production install so the detector can actually run there.
  "rapidocr-onnxruntime>=1.4",
]

[project.optional-dependencies]
training = [
  "torch>=2.5.0",
  "torchvision>=0.20.0",
  "timm>=1.0.11",
  "mlflow>=2.17.0",
  "dvc[s3]>=3.55.0",
  "hydra-core>=1.3.2",
]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  # Property-based tests (test_*_property.py) use hypothesis to drive
  # monotonicity invariants across the typography + embedding-anomaly
  # detectors. Each test generates a many-pair sample so the calibration
  # midpoint/slope cannot drift without breaking a property assertion.
  "hypothesis>=6.115.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipelines", "training", "data", "evaluation"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
