[project]
name = "grader"
version = "0.0.1"
description = "Project Grader API — submission, grading, counterfeit detection."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.3.6",
  "redis>=5.2.0",
  "celery>=5.4.0",
  "boto3>=1.35.0",
  "httpx>=0.27.0",
  "pyjwt[crypto]>=2.9.0",
  "structlog>=24.4.0",
  "python-multipart>=0.0.17",
  "numpy>=2.1.0",
  "opencv-python-headless>=4.10.0",
  "pillow>=11.0.0",
  "slowapi>=0.1.9",
  "grader-ml",
  "sentry-sdk[fastapi]>=2.59.0",
]

[tool.uv.sources]
grader-ml = { path = "../../ml", editable = true }

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "httpx>=0.27.0",
  "moto[s3]>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grader"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
  "requires_postgres: tests that need a live Postgres on localhost:5432",
]
